--- a/public/css/index.css
+++ b/public/css/index.css
@@ -64,6 +64,8 @@ body {
   margin: 0 15% 0.5%;
   padding: 10px 15px;
   color: #1f1f1f;
+  overflow: hidden;
+  text-align: center;
 }
 
 .today {
@@ -81,8 +83,7 @@ body {
 
 .temperature-list .date {
   font-weight: 500;
-  margin-right: 16px;
-  width: 32px;
+  margin-right: 20px;
   font-size: 14px;
 }
 
@@ -116,6 +117,7 @@ body {
   font-size: 16px;
   flex-grow: 1;
   line-height: 2;
+  padding-top: 33px;
 }
 
 .temperature-list .info-percipitation {
@@ -123,6 +125,7 @@ body {
   color: #878787;
   line-height: 1.43;
   text-align: center;
+  padding-top: 33px;
 }
 
 .location-result {
@@ -145,8 +148,11 @@ body {
 }
 
 .search-icon {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   color: grey;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+  margin-right: 0.3em;
 }
 
 .input-container {
@@ -187,10 +193,6 @@ body {
   color: #fff;
   background: #3c3c3d;
   padding: 3px 6px;
-}
-
-.temp {
-  padding: 3px;
 }
 
 .sub-search {
@@ -255,6 +257,7 @@ body {
   letter-spacing: -0.7px;
   font-weight: 500;
   line-height: 1.07;
+  padding: 3px;
 }
 
 .after-temp {
